--- a/views/academico.ejs
+++ b/views/academico.ejs
@@ -1,6 +1,36 @@
 <%- include('header') -%>
 <%- include('navbar') -%>
-<h1>ACADEMICO</h1>
-<%- include('pie') -%>
 <%- include('footer') -%>
+<div class="mx-auto" style="width: 300px;">
+
+    <h1>ACADEMICO</h1>
+
+</div>
+   
+
+
+<div class="card mb-3">
+    <div class="row no-gutters">
+        <div class="col-md-2">
+          <div class="card tex-white bg-primary mb-3">
+            <div class="card-header">Header</div>
+                <div class="card-body">
+                    <h5 class="card-title">Primary card title</h5>
+                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content </p> 
+                </div>   
+            </div>
+        </div>
+
+        <div class="col-md-10">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card whit supporting text below as a natural lead-in to additional content. This content is a little bit longer </p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+               <div>
+            </div>
+        </div>
+    </div>
+
+<p style="height: 800px;"></p>
+<%- include('pie') -%>
 
