--- a/views/nuestrahistoria.ejs
+++ b/views/nuestrahistoria.ejs
@@ -151,3 +151,6 @@ dolores eum neque aliquam, nesciunt necessitatibus perferendis obcaecati ea, eve
                     </div>
                 </div>
                 </div>
+
+                <p style="height: 100px;"></p>
+                <%- include('pie') -%>
