--- a/views/formulario.ejs
+++ b/views/formulario.ejs
@@ -1,3 +1,12 @@
 <%- include('header') -%>
 <%- include('navbar') -%>
 <%- include('footer') -%>
+
+<div class="mx-auto" style="width: 300px;">
+
+    <h1>FORMULARIO</h1>
+
+</div>
+
+<p style="height: 800px;"></p>
+<%- include('pie') -%>
